2A/05_Projet_GL/src/test/deca/context/invalid/complet/73_instance_of_class_null.deca
// Description :
//  instanceof avce null 
// Resultats :
//    ligne 14 :  l'opération instanceOf n'est pas possible entre 'null' et 'int'  
// Historique : 
//  cree le 16/01/2024

{

    null instanceof int; 
}